--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,9 +5,10 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+{#        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">#}
         <title>{% block title %}Homepage{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
+
     </head>
 
     <body>
