Modificattion de la congifugation css en scss, création d'un template de base

--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -11,7 +11,7 @@
         <div class="navbar-brand">
             <a class="navbar-item" href="#">
                 <p class="subtitle is-4 has-text-primary">
-                    <i class="fab fa-korvue"></i><b>RITIK</b>
+                    <i class="fab fa-korvue"></i><b>-test</b>
                 </p>
             </a>
 
