--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -1,19 +1,12 @@
-{% extends 'base.html.twig' %}
-
-{% block stylesheets %}
-    {# Insérer les balises <link> de l'entrée "app" #}
-    {{ encore_entry_link_tags('app') }}
-{% endblock %}
-
-{% block javascripts %}
-    {# Insérer les balises <script> de l'entrée "app" #}
-    {{ encore_entry_script_tags('app') }}
-{% endblock %}
+{% extends '_template.html.twig' %}
 
 {% block title %}Accueil{% endblock %}
 
-{% block body %}
-    <h1>Accueil</h1>
+{% block content %}
+    <div class="section">
+        <h1 class="title">Accueil</h1>
+    </div>
+
 {% endblock %}
 
 
