--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -28,7 +28,7 @@
                     Artistes
                 </a>
 
-                <a class="navbar-item" href="#">
+                <a class="navbar-item" href=" {{ path('record_news') }}">
                     Nouveautés
                 </a>
             </div>
