--- a/templates/record/artist_list.html.twig
+++ b/templates/record/artist_list.html.twig
@@ -1,6 +1,6 @@
 {% extends "_template.html.twig" %}
 
-{% block title %}Artist{% endblock %}
+{% block title %}Artistes{% endblock %}
 
 {% block content %}
     <div class="section">
