--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -58,7 +58,7 @@
             {% else %}
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-primary is-small" href="#">
+                        <a class="button is-primary is-small" href="{{ path('app_register') }}">
                             <strong>Inscription</strong>
                         </a>
                         <a class="button is-light is-small" href="{{ path('app_login') }}">
