--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -5,6 +5,8 @@
 {% block content %}
     <div class="section">
         <h1 class="title">Accueil</h1>
+
+        {% include 'includes/flash.html.twig' %}
     </div>
 
 {% endblock %}
