--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -37,7 +37,7 @@
 
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-primary is-small" href="#">
+                        <a class="button is-primary is-small" href="{{ path('account_page') }}">
                             <span class="icon"><i class="fas fa-user-circle"></i></span>
                             <strong>{{ app.user.pseudo }}</strong>
                         </a>
